[tool.poetry]
name = "scrat-demo"
version = "0.1.0"
description = ""
authors = ["brandonspark <wu.brandonj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
werkzeug="2.2.2"
django="3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
